--- a/Hands-on_Ex/Hands-on_Ex02.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Take-home Exercise 02: Beyond ggplot2 Fundamentals"
+title: "Hands-on Exercise 02: Beyond ggplot2 Fundamentals"
 author: "Ou Yiming"
 date-modified: "last-modified"
 execute:
