--- a/Hands-on_Ex/Hands-on_Ex01.qmd
+++ b/Hands-on_Ex/Hands-on_Ex01.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Take-home Exercise 01: Layered Grammer of Graphics"
+title: "Hands-on Exercise 01: Layered Grammer of Graphics"
 author: "Ou Yiming"
 date-modified: "last-modified"
 execute:
