--- a/In-class_Ex/In-class_Ex02/In-class_Ex02.qmd
+++ b/In-class_Ex/In-class_Ex02/In-class_Ex02.qmd
@@ -1,18 +1,14 @@
 ---
-title: "In-class_Ex02"
-format: html
+title: "In-class Exercise 02: Creating Dashboards (Tableau)"
+author: "Ou Yiming"
+date-modified: "last-modified"
+execute:
+  echo: true
+  eval: true
+  warning: false
+  freeze: true
 ---
 
-::: {#viz1737790134579 .tableauPlaceholder style="position: relative"}
-<noscript><a href='#'><img src="https://public.tableau.com/static/images/In/In-class_Ex02_17377894914220/Dashboard1/1_rss.png" alt="Dashboard 1 " style="border: none"/></a></noscript>
+In the second lesson, we explored further functionalities in Tableau and created more dashboards using the same dataset (**Superstore2020.xls**) in Lesson 1 to perform better visualizations.
 
-<object class="tableauViz" style="display:none;">
-
-<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='In-class_Ex02_17377894914220&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;In&#47;In-class_Ex02_17377894914220&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' />
-
-</object>
-:::
-
-```         
-            <script type='text/javascript'>                    var divElement = document.getElementById('viz1737790134579');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1427px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-```
+Please refer to the Public Tableau link: <a href="https://public.tableau.com/views/In-class_Ex02_17377894914220/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">Creating Dashboards (Tableau)</a>
