Update In-class Ex04

--- a/In-class_Ex/In-class_Ex04/In-class_Ex04.qmd
+++ b/In-class_Ex/In-class_Ex04/In-class_Ex04.qmd
@@ -1,5 +1,5 @@
 ---
-title: "In-class Exercise 04"
+title: "In-class Exercise 04: Boxplot"
 author: "Ou Yiming"
 date-modified: "last-modified"
 execute:
